# CLI

./: .gitignore  CMakeLists.txt  README.md
include/: Argument.hpp  ArgumentDescriptor.hpp  Cli.hpp  Command.hpp  CommandFactory.hpp  Input.hpp  Output.hpp  Section.hpp  Settings.hpp  SubSection.hpp  utils.hpp
include/Sections/: CameraSection.hpp  GetSetSection.hpp  ParamSection.hpp  PluginSection.hpp  SceneSection.hpp  SettingsSection.hpp
src/: Argument.cpp  Argument.hpp  ArgumentDescriptor.cpp  ArgumentDescriptor.hpp  Cli.cpp  Command.cpp  CommandFactory.cpp  CommandFactory.hpp  Output.cpp  Output.hpp  Section.cpp  Section.hpp  SubSection.cpp  constants.hpp  main.cpp
src/Sections/: CameraSection.cpp  CameraSection.hpp  GetSetSection.cpp  ParamSection.cpp  PluginSection.cpp  SceneSection.cpp  SettingsSection.cpp
